--- a/app/index.html
+++ b/app/index.html
@@ -5,14 +5,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS basics</title>
-  <script src="/script.js" defer></script>
+  <!-- <script src="/script.js" defer></script> -->
+  <script src="/movie-list-app.js" defer></script>
 
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
-  <h1>Hello world!</h1>
+  <!-- <h1>Hello world!</h1> -->
 
-  <button id="btn">Say Hello</button>
+  <!-- <button id="btn">Say Hello</button> -->
+
+
+  <div id="app">
+<!--
+    <div class="movie-card">
+      <h2>Matrix</h2>
+      <h3>1998</h3>
+
+      <button>Delete</button>
+    </div>
+
+    <div class="movie-card">
+      <h2>Ghost</h2>
+      <h3>1999</h3>
+      <button>Delete</button>
+    </div> -->
+
+  </div>
 
 </body>
 </html>
