--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,27 @@
       <button>Delete</button>
     </div> -->
 
+
+
   </div>
+
+  <!--
+  <div class="movie-card">
+    <label for="movie-name">Movie name</label>
+    <input type="text" name="movie-name"
+      placeholder="Enter movie name"
+      id="movie-name"
+      value="Ghost"/>
+
+    <label for="movie-year">Movie year</label>
+    <input type="number" name="movie-year"
+      placeholder="Enter movie year"
+      id="movie-year"
+      value="1998"/>
+
+    <input type="submit" value="Update">
+  </div>
+  -->
 
 </body>
 </html>
